# elhaz

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: pull_request.yml  push.yml  validate_pr_title.yml
assume/: constants.py  daemon.py  models.py
assume/cli/: __main__.py  config.py  daemon.py  output.py  prompts.py  state.py
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  installation.html  installation.rst  objects.inv  quickstart.html  quickstart.rst  search.html  searchindex.js
docs/_sources/: index.rst.txt  installation.rst.txt  quickstart.rst.txt
docs/_sources/cli/: elhaz-config-get.rst.txt  elhaz-config-meta.rst.txt  elhaz-config-update.rst.txt  elhaz-config.rst.txt  elhaz-daemon-add.rst.txt  elhaz-daemon-kill.rst.txt  elhaz-daemon-list.rst.txt  elhaz-daemon-status.rst.txt  elhaz-daemon-stop.rst.txt  elhaz-daemon.rst.txt  elhaz-export.rst.txt  elhaz-whoami.rst.txt  elhaz.rst.txt
docs/_sources/concepts/: config.rst.txt  meta.rst.txt  session.rst.txt  sts.rst.txt
docs/cli/: elhaz-config-add.html  elhaz-config-add.rst  elhaz-config-get.html  elhaz-config-get.rst  elhaz-config-list.html  elhaz-config-list.rst  elhaz-config-meta.html  elhaz-config-remove.html  elhaz-config-remove.rst  elhaz-config-update.html  elhaz-config.html  elhaz-config.rst  elhaz-daemon-add.html  elhaz-daemon-kill.html  elhaz-daemon-list.html  elhaz-daemon-logs.html  elhaz-daemon-logs.rst  elhaz-daemon-remove.html  elhaz-daemon-remove.rst  elhaz-daemon-start.html  elhaz-daemon-start.rst  elhaz-daemon-status.html  elhaz-daemon-stop.html  elhaz-daemon.html  elhaz-daemon.rst  elhaz-exec.html  elhaz-exec.rst  elhaz-export.html  elhaz-export.rst  elhaz-shell.html  elhaz-shell.rst  elhaz-whoami.html  elhaz-whoami.rst  elhaz.html  elhaz.rst  index.html  index.rst
docs/concepts/: assumerole.html  assumerole.rst  config.html  config.rst  daemon.html  daemon.rst  identitycenter.html  identitycenter.rst  index.html  index.rst  meta.html  mfa.html  mfa.rst  session.html  sts.html
elhaz/: __init__.py  config.py  constants.py  daemon.py  exceptions.py  models.py  session.py
elhaz/cli/: __main__.py  config.py  daemon.py  prompts.py  state.py
tests/: conftest.py  test_cli_config.py  test_cli_daemon.py  test_cli_main.py  test_cli_output.py  test_cli_prompts.py  test_config.py  test_constants.py  test_daemon.py  test_daemon_unit.py  test_models.py  test_session.py
